# Copyright 2018 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Cartographer is a system that provides real-time simultaneous localization
# and mapping (SLAM) in 2D and 3D across multiple platforms and sensor
# configurations.

licenses(["notice"])  # Apache 2.0

config_setting(
  name = "k8-gcc4.8",
  values = {"cpu": "k8"},
)

config_setting(
  name = "k8-gcc5.4",
  define_values = {
    "gcc": "5.4",
  },
  values = {"cpu": "k8"},
)

config_setting(
  name = "aarch64",
  values = {"cpu": "aarch64"},
)

filegroup(
  name = "empty",
  srcs = [],
)

COPTS = select({
    ":k8-gcc4.8": [
        "-std=c++11",
    ],
    ":k8-gcc5.4": [
        "-std=c++14",
    ],
    ":aarch64": [
        "-std=c++14",
    ],
    "//conditions:default": [":empty"]
})

package(default_visibility = ["//visibility:public"])

exports_files(["LICENSE"])

filegroup(
    name = "cartographer_ros/configuration_files",
    srcs = glob([
        "cartographer_ros/configuration_files/*.gsp",
    ]),
)


cc_binary(
    name = "cartographer_node",
    srcs = glob([
        "cartographer_ros/cartographer_ros/**/*.cc",
        "cartographer_ros/cartographer_ros/**/*.h",
    ]),
    includes = [
        "cartographer_ros",
    ],
    defines = [
        # "PUBLISH_DEBUG_TOPIC"
    ],
    copts = COPTS,
    linkstatic = True,
    stamp = 1,
    deps = [
        "@com_google_googletest//:gtest",
        "@cartographer//cartographer:cartographer",
        "@public_interface//:public_interface",
        "@io_bazel_rules_ros//ros:std_msgs",
        "@io_bazel_rules_ros//ros:geometry_msgs",
        "@io_bazel_rules_ros//ros:nav_msgs",
        "@io_bazel_rules_ros//ros:roscpp",
        "@io_bazel_rules_ros//ros:tf",
        "@io_bazel_rules_ros//ros:visualization_msgs",
        "@io_bazel_rules_ros//ros:diagnostic_msgs",
        "@pcl",
        "@pcl_conversions",
        "@link_stamp//:build_revision",
        "@gs//:gs",
    ]
)
